Checking adaptive version

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 
     </section>
 
-    <header id="scr1" class="scr bg-image text-bg-dark intro" style="background-image: url(images/Bg-Intro.jpg);">
+    <!-- <header id="scr1" class="scr bg-image text-bg-dark intro" style="background-image: url(images/Bg-Intro.jpg);"> -->
+    <!-- <header id="scr1" class="scr bg-image text-bg-dark intro" style="background-image: url(images/back_light.png);"> -->
+        <header id="scr1" class="scr bg-image text-bg-dark intro" style="background-image: url(images/back.png);">
 
 
         <div class="container intro-info-container">
